--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ pubspec.lock
 .pub/
 /build/
 
+
 # Symbolication related
 app.*.symbols
 
@@ -54,6 +55,7 @@ app.*.map.json
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
+**/android/key.properties
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
